--- a/.github/workflows/test1.yaml
+++ b/.github/workflows/test1.yaml
@@ -1,3 +1,4 @@
+---
 name: test1
 on: [push]
 jobs:
@@ -11,4 +12,17 @@ jobs:
       - name: test1.2
         id: test1_2
         run: echo "test1.2"
-      
+---
+name: test2
+on: [push]
+jobs:
+  check-bats-version:
+    runs-on: ubuntu-latest
+    steps:
+      - name: test2.1
+        id: test2_1
+        run: echo "test2.1"
+
+      - name: test2.2
+        id: test2_2
+        run: echo "test2.2"
