--- a/.github/workflows/test1.yaml
+++ b/.github/workflows/test1.yaml
@@ -16,7 +16,7 @@ jobs:
 name: test2
 on: [push]
 jobs:
-  check-bats-version:
+  another-job:
     runs-on: ubuntu-latest
     steps:
       - name: test2.1
