--- a/.github/workflows/test1.yaml
+++ b/.github/workflows/test1.yaml
@@ -7,8 +7,8 @@ jobs:
     steps:
       - name: test1.1
         id: test1_1
-        run: echo "test1.1"
+        run: exit 0
 
       - name: test1.2
         id: test1_2
-        run: echo "test1.2"
+        run: exit 0
