--- a/.github/workflows/test1.yaml
+++ b/.github/workflows/test1.yaml
@@ -2,7 +2,7 @@
 name: test1
 on: [push]
 jobs:
-  check-bats-version:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: test1.1
@@ -11,4 +11,23 @@ jobs:
 
       - name: test1.2
         id: test1_2
-        run: exit 0
+        run: |
+          mkdir build
+          echo "{\"value\": 1}" > build/test.json
+
+      - name: Upload static files as artifact
+        id: deployment
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: build/
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
