--- a/.github/workflows/check_status.yaml
+++ b/.github/workflows/check_status.yaml
@@ -1,7 +1,8 @@
 name: Run Action on Commit Status Change
 
 on:
-  status: {}
+  check_run:
+    types: [rerequested, completed]
 
 jobs:
   on_status:
